[package]
name = "kg-utils"
version = "0.3.1"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Various collections and utilities.
"""
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://gihub.com/Kodegenix/kg-utils"
edition = "2018"

[workspace]

[features]
default = ["serde_impl", "heapsize_impl"]
serde_impl = ["serde"]
heapsize_impl = ["heapsize"]

[dependencies]
serde = { version = "1.0.99", optional = true }
heapsize = { version = "0.4.2", optional = true }

